`packing` submodule for tarnish/ethscape packers